--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Richard Varadi",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "faker": "^6.6.6"
   }
 }
