--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "faker": "^6.6.6"
+    "faker": "^6.6.6",
+    "mongoose": "^8.0.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
