--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "This is the homework for this course: Server Side JavaScript",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --recursive"
   },
   "author": "Richard Varadi",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.3.10",
+    "chai-http": "^4.4.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "faker": "^6.6.6",
+    "mocha": "^10.2.0",
     "mongoose": "^8.0.0",
     "multer": "^1.4.5-lts.1"
   }
